Se agrega la libreria swiper.js para la animacion del carrucel

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
     <title>Document</title>
   </head>
   <body>
@@ -24,11 +28,7 @@
             <div class="div-product-text">
               <div class="div-description">
                 <h3>Cheese burger</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Soluta recusandae eos repellendus fugit ex accusamus ut magnam
-                  optio commodi esse.
-                </p>
+                <p>350 CAL</p>
               </div>
               <div class="div-price">
                 <p>$80.00</p>
@@ -46,11 +46,7 @@
             <div class="div-product-text">
               <div class="div-description">
                 <h3>Cheese burger</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Soluta recusandae eos repellendus fugit ex accusamus ut magnam
-                  optio commodi esse.
-                </p>
+                <p>350 CAL</p>
               </div>
               <div class="div-price">
                 <p>$80.00</p>
@@ -65,11 +61,7 @@
             <div class="div-product-text">
               <div class="div-description">
                 <h3>Cheese burger</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Soluta recusandae eos repellendus fugit ex accusamus ut magnam
-                  optio commodi esse.
-                </p>
+                <p>350 CAL</p>
               </div>
               <div class="div-price">
                 <p>$80.00</p>
@@ -87,11 +79,7 @@
             <div class="div-product-text">
               <div class="div-description">
                 <h3>Cheese burger</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Soluta recusandae eos repellendus fugit ex accusamus ut magnam
-                  optio commodi esse.
-                </p>
+                <p>350 CAL</p>
               </div>
               <div class="div-price">
                 <p>$80.00</p>
@@ -106,11 +94,7 @@
             <div class="div-product-text">
               <div class="div-description">
                 <h3>Cheese burger</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Soluta recusandae eos repellendus fugit ex accusamus ut magnam
-                  optio commodi esse.
-                </p>
+                <p>350 CAL</p>
               </div>
               <div class="div-price">
                 <p>$80.00</p>
@@ -128,11 +112,7 @@
             <div class="div-product-text">
               <div class="div-description">
                 <h3>Cheese burger</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Soluta recusandae eos repellendus fugit ex accusamus ut magnam
-                  optio commodi esse.
-                </p>
+                <p>350 CAL</p>
               </div>
               <div class="div-price">
                 <p>$80.00</p>
@@ -142,61 +122,86 @@
         </div>
       </div>
 
-      <div class="div-product-recommendation">
+      <div class="div-product-recommendation swiper">
         <div class="title-product-recommendation">
           <h2>Popular in your Meeeat</h2>
         </div>
 
-        <div class="div-card-recommendation">
-          <ul>
-            <li class="card-recommendation" data-id="1">
-              <div class="img-recommendation">
-                <img src="assets/recomendation-burguer.jpeg" alt="" />
-              </div>
-              <div class="text-recomendation">
-                <div class="price-recommendation">
-                  <p>$80.00</p>
-                </div>
-                <div class="desc-recomendation">Wopper Jr.</div>
-              </div>
-            </li>
+        <div class="div-card-recommendation swiper-wrapper">
+          
 
-            <li class="card-recommendation" data-id="1">
+          <div class="card-recommendation swiper-slide slide-1 slide-item img-1" data-id="3" >
+            <div class="img-text-recomendation">
               <div class="img-recommendation">
-                <img src="assets/recomendation-burguer.jpeg" alt="" />
+                <img src="assets/recetas-de-hamburguesas-caseras.jpg" alt="" />
               </div>
-              <div class="text-recomendation">
-                <div class="price-recommendation">
-                  <p>$80.00</p>
-                </div>
-                <div class="desc-recomendation">Wopper Jr.</div>
+              <div class="price-recommendation">
+                <p>$80.00</p>
               </div>
-            </li>
+            </div>
+            <div class="desc-recomendation">
+            <p>Wopper Jr.</p>  
+            </div>
+          </div>
 
-            <li class="card-recommendation" data-id="1">
+          <div class="card-recommendation swiper-slide slide-2 slide-item img-2" data-id="3" >
+            <div class="img-text-recomendation">
               <div class="img-recommendation">
-                <img src="assets/recomendation-burguer.jpeg" alt="" />
+                <img src="assets/recetas-de-hamburguesas-caseras.jpg" alt="" />
               </div>
-              <div class="text-recomendation">
-                <div class="price-recommendation">
-                  <p>$80.00</p>
-                </div>
-                <div class="desc-recomendation">Wopper Jr.</div>
+              <div class="price-recommendation">
+                <p>$80.00</p>
               </div>
-            </li>
+            </div>
+            <div class="desc-recomendation">
+              <p>Wopper Jr.</p>  
+              </div>
+          </div>
 
-            <li class="card-recommendation" data-id="1">
+          <div class="card-recommendation swiper-slide slide-3 slide-item img-3" data-id="3" >
+            <div class="img-text-recomendation">
               <div class="img-recommendation">
-                <img src="assets/recomendation-burguer.jpeg" alt="" />
+                <img src="assets/recetas-de-hamburguesas-caseras.jpg" alt="" />
               </div>
-              <div class="text-recomendation">
-                <div class="price-recommendation">
-                  <p>$80.00</p>
-                </div>
-                <div class="desc-recomendation">Wopper Jr.</div>
+              <div class="price-recommendation">
+                <p>$80.00</p>
               </div>
-            </li>
-          </ul>
+            </div>
+            <div class="desc-recomendation">
+              <p>Wopper Jr.</p>  
+              </div>
+          </div>
+
+          <div class="card-recommendation swiper-slide slide-4 slide-item img-4" data-id="3" >
+            <div class="img-text-recomendation">
+              <div class="img-recommendation">
+                <img src="assets/recetas-de-hamburguesas-caseras.jpg" alt="" />
+              </div>
+              <div class="price-recommendation">
+                <p>$80.00</p>
+              </div>
+            </div>
+            <div class="desc-recomendation">
+              <p>Wopper Jr.</p>  
+              </div>
+          </div>
+
+          <div class="card-recommendation swiper-slide slide-5 slide-item img-5" data-id="3" >
+            <div class="img-text-recomendation">
+              <div class="img-recommendation">
+                <img src="assets/recetas-de-hamburguesas-caseras.jpg" alt="" />
+              </div>
+              <div class="price-recommendation">
+                <p>$80.00</p>
+              </div>
+            </div>
+            <div class="desc-recomendation">
+              <p>Wopper Jr.</p>  
+              </div>
+          </div>
+
+
+
         </div>
       </div>
 
@@ -205,5 +210,7 @@
         <div class="order-confirmation"></div>
       </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
