Se divide el css en distintos archivos dependiendo la seccion del menu

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
     />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/advertising.css" />
+    <link rel="stylesheet" href="css/carousel.css" />
+    <link rel="stylesheet" href="css/order-list.css" />
+
     <title>Document</title>
   </head>
   <body>
@@ -16,6 +20,9 @@
       <!-- <div class="logo-shake">
         <img src="assets/Logo SS 3240x2180px -cut.png" alt="logo-shake-shack" />
       </div> -->
+
+      <!-- Productos promocionados -->
+
       <div class="div-product-advertising">
         <div class="title-product-advertising">
           <h2>Freshly made burgers</h2>
@@ -119,9 +126,12 @@
               </div>
             </div>
           </div>
+
+          
         </div>
       </div>
 
+      <!-- Productos recomendados -->
       <div class="div-product-recommendation swiper">
         <div class="title-product-recommendation">
           <h2>Popular in your Meeeat</h2>
@@ -200,14 +210,32 @@
               </div>
           </div>
 
-
-
         </div>
       </div>
 
+      <!-- Lista de ordenes -->
       <div class="div-orders-suggestion">
-        <div class="order-list"></div>
-        <div class="order-confirmation"></div>
+        <div class="container-order-list">
+          <div class="title-order-list">
+            <h2>Order List</h2>
+          </div>
+          <div class="ul-order-list">
+            <ul class="ulList-orders">
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+             
+            </ul>
+          </div>
+
+        </div>
+        <!-- <div class="order-confirmation"></div> -->
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
