Se agrega el modal publicitario con efecto de carrucel

--- a/public/index.html
+++ b/public/index.html
@@ -9,18 +9,25 @@
     />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="css/advertising.css" />
-    <link rel="stylesheet" href="css/carousel.css" />
-    <link rel="stylesheet" href="css/order-list.css" />
+    <link rel="stylesheet" href="css/principal/advertising.css" />
+    <link rel="stylesheet" href="css/principal/carousel.css" />
+    <link rel="stylesheet" href="css/principal/order-list.css" />
 
     <title>Document</title>
   </head>
   <body>
     <div class="container">
-      <!-- <div class="logo-shake">
-        <img src="assets/Logo SS 3240x2180px -cut.png" alt="logo-shake-shack" />
-      </div> -->
-
+      <!-- Modal Publicidad -->
+      <div class="modal-publicidad swiper2">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide slide-1 slide-item img-1">
+            <img src="assets/modal/AMEYALCO CARAJILLO.jpg" alt="imagen-publicitaria" />
+          </div>
+          <div class="swiper-slide slide-2 slide-item img-2">
+            <img src="assets/modal/Ameyalco ShackBurger.jpg" alt="">
+          </div>
+        </div>
+      </div>
       <!-- Productos promocionados -->
 
       <div class="div-product-advertising">
@@ -291,7 +298,6 @@
           </div>
         </div>
       </div>
-      
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="index.js" type="module"></script>
