Se finaliza la maquetacion del proyecto

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="container">
       <!-- Modal Publicidad -->
-      <div class="modal-publicidad swiper2">
+      <!-- <div class="modal-publicidad swiper2">
         <div class="swiper-wrapper">
           <div class="swiper-slide slide-1 slide-item img-1">
             <img src="assets/modal/AMEYALCO CARAJILLO.jpg" alt="imagen-publicitaria" />
@@ -27,7 +27,101 @@
             <img src="assets/modal/Ameyalco ShackBurger.jpg" alt="">
           </div>
         </div>
-      </div>
+      </div> -->
+
+      <!-- Modal Order List -->
+      <!-- <div class="modal-order-correct">
+        <div class="title-logo-order-correct">
+          <div class="text-order-correct">
+            <h2>Is your order correct ?</h2>
+          </div>
+          <div class="logo-order-correct">
+            <img src="assets/Logo SS 3240x2180px -cut.png" alt="logo-shake">
+          </div>
+        </div>
+
+        <div class="content-order-correct">
+          <ul class="ulList-orders">
+
+            <li class="ulList-orders-li">
+              <div class="order-amount">
+                <h2>1</h2>
+              </div>
+              <div class="order-type">
+                <h3>Sweet Classic - Combo</h3>
+                <ul class="ul-order-content"></ul>
+              </div>
+              <div class="order-price">
+                <p>$8.50</p>
+              </div>
+            </li>
+
+            <li class="ulList-orders-li">
+              <div class="order-amount">
+                <h2>1</h2>
+              </div>
+              <div class="order-type">
+                <h3>Sweet Classic - Combo</h3>
+                <ul class="ul-order-content"></ul>
+              </div>
+              <div class="order-price">
+                <p>$8.50</p>
+              </div>
+            </li>
+
+            <li class="ulList-orders-li">
+              <div class="order-amount">
+                <h2>1</h2>
+              </div>
+              <div class="order-type">
+                <h3>Sweet Classic - Combo</h3>
+                <ul class="ul-order-content"></ul>
+              </div>
+              <div class="order-price">
+                <p>$8.50</p>
+              </div>
+            </li>
+
+            <li class="ulList-orders-li">
+              <div class="order-amount">
+                <h2>1</h2>
+              </div>
+              <div class="order-type">
+                <h3>Sweet Classic - Combo</h3>
+                <ul class="ul-order-content"></ul>
+              </div>
+              <div class="order-price">
+                <p>$8.50</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer-order-correct">
+          <div class="footer-order-total">
+            <h2>Please prepare</h2>
+            <h2>Total</h2>
+            <p>$34.00</p>
+          </div>
+          <div class="footer-order-title-one">
+            <h2>Thank you for your order</h2>
+          </div>
+          <div class="footer-order-icon">
+            <div class="icon-one">
+              <svg xmlns="http://www.w3.org/2000/svg" width="380" height="380" viewBox="0 0 24 24"><path fill="#ffffff" d="M16 6H6l-5 6v3h2a3 3 0 0 0 3 3a3 3 0 0 0 3-3h6a3 3 0 0 0 3 3a3 3 0 0 0 3-3h2v-3c0-1.11-.89-2-2-2h-2l-3-4M6.5 7.5h4V10h-6l2-2.5m5.5 0h3.5l1.96 2.5H12V7.5m-6 6A1.5 1.5 0 0 1 7.5 15A1.5 1.5 0 0 1 6 16.5A1.5 1.5 0 0 1 4.5 15A1.5 1.5 0 0 1 6 13.5m12 0a1.5 1.5 0 0 1 1.5 1.5a1.5 1.5 0 0 1-1.5 1.5a1.5 1.5 0 0 1-1.5-1.5a1.5 1.5 0 0 1 1.5-1.5Z"/></svg>
+            </div>
+            <div class="icon-two">
+              <svg xmlns="http://www.w3.org/2000/svg" width="380" height="380" viewBox="0 0 24 24"><path fill="#5e9e40" d="M16.15 13H5q-.425 0-.713-.288T4 12q0-.425.288-.713T5 11h11.15L13.3 8.15q-.3-.3-.288-.7t.288-.7q.3-.3.713-.313t.712.288L19.3 11.3q.15.15.213.325t.062.375q0 .2-.063.375t-.212.325l-4.575 4.575q-.3.3-.712.288t-.713-.313q-.275-.3-.288-.7t.288-.7L16.15 13Z"/></svg>
+            </div>
+          </div>
+          <div class="footer-order-title-two">
+            <h3>See you at the window</h3>
+          </div>
+        </div>
+
+      </div> -->
+<!-- ************************************************************ -->
+
       <!-- Productos promocionados -->
 
       <div class="div-product-advertising">
@@ -294,7 +388,7 @@
           </div>
           <div class="order-list-total">
             <div class="text-total"><h2>Total</h2></div>
-            <div class="amount-total-total"><h2>$80.00</h2></div>
+            <div class="amount-total-total"><h2>$34.00</h2></div>
           </div>
         </div>
       </div>
