Depuramos el apartado de order list

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
     />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/modals/modal-advertising.css" />
+    <link rel="stylesheet" href="css/modals/modal-order-correct.css" />
     <link rel="stylesheet" href="css/principal/advertising.css" />
     <link rel="stylesheet" href="css/principal/carousel.css" />
     <link rel="stylesheet" href="css/principal/order-list.css" />
@@ -30,7 +32,7 @@
       </div> -->
 
       <!-- Modal Order List -->
-      <!-- <div class="modal-order-correct">
+      <div class="modal-order-correct ocultar">
         <div class="title-logo-order-correct">
           <div class="text-order-correct">
             <h2>Is your order correct ?</h2>
@@ -41,59 +43,8 @@
         </div>
 
         <div class="content-order-correct">
-          <ul class="ulList-orders">
-
-            <li class="ulList-orders-li">
-              <div class="order-amount">
-                <h2>1</h2>
-              </div>
-              <div class="order-type">
-                <h3>Sweet Classic - Combo</h3>
-                <ul class="ul-order-content"></ul>
-              </div>
-              <div class="order-price">
-                <p>$8.50</p>
-              </div>
-            </li>
-
-            <li class="ulList-orders-li">
-              <div class="order-amount">
-                <h2>1</h2>
-              </div>
-              <div class="order-type">
-                <h3>Sweet Classic - Combo</h3>
-                <ul class="ul-order-content"></ul>
-              </div>
-              <div class="order-price">
-                <p>$8.50</p>
-              </div>
-            </li>
-
-            <li class="ulList-orders-li">
-              <div class="order-amount">
-                <h2>1</h2>
-              </div>
-              <div class="order-type">
-                <h3>Sweet Classic - Combo</h3>
-                <ul class="ul-order-content"></ul>
-              </div>
-              <div class="order-price">
-                <p>$8.50</p>
-              </div>
-            </li>
-
-            <li class="ulList-orders-li">
-              <div class="order-amount">
-                <h2>1</h2>
-              </div>
-              <div class="order-type">
-                <h3>Sweet Classic - Combo</h3>
-                <ul class="ul-order-content"></ul>
-              </div>
-              <div class="order-price">
-                <p>$8.50</p>
-              </div>
-            </li>
+          <ul class="ulList-orders-correct">
+            
           </ul>
         </div>
 
@@ -119,7 +70,7 @@
           </div>
         </div>
 
-      </div> -->
+      </div>
 <!-- ************************************************************ -->
 
       <!-- Productos promocionados -->
@@ -332,63 +283,12 @@
           </div>
           <div class="ul-order-list">
             <ul class="ulList-orders">
-              <!-- ************************* -->
-              <li class="ulList-orders-li">
-                <div class="order-amount">
-                  <h2>1</h2>
-                </div>
-                <div class="order-type">
-                  <h3>Sweet Classic - Combo</h3>
-                  <ul class="ul-order-content"></ul>
-                </div>
-                <div class="order-price">
-                  <p>$8.50</p>
-                </div>
-              </li>
-              <!-- ************************* -->
-              <li class="ulList-orders-li">
-                <div class="order-amount">
-                  <h2>1</h2>
-                </div>
-                <div class="order-type">
-                  <h3>Sweet Classic - Combo</h3>
-                  <ul class="ul-order-content"></ul>
-                </div>
-                <div class="order-price">
-                  <p>$8.50</p>
-                </div>
-              </li>
-              <!-- ************************* -->
-              <li class="ulList-orders-li">
-                <div class="order-amount">
-                  <h2>1</h2>
-                </div>
-                <div class="order-type">
-                  <h3>Sweet Classic - Combo</h3>
-                  <ul class="ul-order-content"></ul>
-                </div>
-                <div class="order-price">
-                  <p>$8.50</p>
-                </div>
-              </li>
-              <!-- ************************* -->
-              <li class="ulList-orders-li">
-                <div class="order-amount">
-                  <h2>1</h2>
-                </div>
-                <div class="order-type">
-                  <h3>Sweet Classic - Combo</h3>
-                  <ul class="ul-order-content"></ul>
-                </div>
-                <div class="order-price">
-                  <p>$8.50</p>
-                </div>
-              </li>
+            
             </ul>
           </div>
           <div class="order-list-total">
             <div class="text-total"><h2>Total</h2></div>
-            <div class="amount-total-total"><h2>$34.00</h2></div>
+            <div class="amount-total-total"><h2>$0.00</h2></div>
           </div>
         </div>
       </div>
