--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <body>
     <div class="container">
       <!-- Modal Publicidad -->
-      <!-- <div class="modal-publicidad swiper2">
+      <div class="modal-publicidad swiper2 ocultar-advertising">
         <div class="swiper-wrapper">
           <div class="swiper-slide slide-1 slide-item img-1">
             <img src="assets/modal/AMEYALCO CARAJILLO.jpg" alt="imagen-publicitaria" />
@@ -29,10 +29,10 @@
             <img src="assets/modal/Ameyalco ShackBurger.jpg" alt="">
           </div>
         </div>
-      </div> -->
+      </div>
 
       <!-- Modal Order List -->
-      <div class="modal-order-correct ocultar">
+      <div class="modal-order-correct ocultar-order-list">
         <div class="title-logo-order-correct">
           <div class="text-order-correct">
             <h2>Is your order correct ?</h2>
@@ -52,14 +52,14 @@
           <div class="footer-order-total">
             <h2>Please prepare</h2>
             <h2>Total</h2>
-            <p>$34.00</p>
+            <p>$0.00</p>
           </div>
           <div class="footer-order-title-one">
             <h2>Thank you for your order</h2>
           </div>
           <div class="footer-order-icon">
             <div class="icon-one">
-              <svg xmlns="http://www.w3.org/2000/svg" width="380" height="380" viewBox="0 0 24 24"><path fill="#ffffff" d="M16 6H6l-5 6v3h2a3 3 0 0 0 3 3a3 3 0 0 0 3-3h6a3 3 0 0 0 3 3a3 3 0 0 0 3-3h2v-3c0-1.11-.89-2-2-2h-2l-3-4M6.5 7.5h4V10h-6l2-2.5m5.5 0h3.5l1.96 2.5H12V7.5m-6 6A1.5 1.5 0 0 1 7.5 15A1.5 1.5 0 0 1 6 16.5A1.5 1.5 0 0 1 4.5 15A1.5 1.5 0 0 1 6 13.5m12 0a1.5 1.5 0 0 1 1.5 1.5a1.5 1.5 0 0 1-1.5 1.5a1.5 1.5 0 0 1-1.5-1.5a1.5 1.5 0 0 1 1.5-1.5Z"/></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="380" height="380" viewBox="0 0 256 256"><path fill="#ffffff" d="M240 112h-28.69L168 68.69A15.86 15.86 0 0 0 156.69 64H44.28A16 16 0 0 0 31 71.12L1.34 115.56A8.07 8.07 0 0 0 0 120v48a16 16 0 0 0 16 16h17a32 32 0 0 0 62 0h66a32 32 0 0 0 62 0h17a16 16 0 0 0 16-16v-40a16 16 0 0 0-16-16ZM44.28 80h112.41l32 32H23ZM64 192a16 16 0 1 1 16-16a16 16 0 0 1-16 16Zm128 0a16 16 0 1 1 16-16a16 16 0 0 1-16 16Z"/></svg>
             </div>
             <div class="icon-two">
               <svg xmlns="http://www.w3.org/2000/svg" width="380" height="380" viewBox="0 0 24 24"><path fill="#5e9e40" d="M16.15 13H5q-.425 0-.713-.288T4 12q0-.425.288-.713T5 11h11.15L13.3 8.15q-.3-.3-.288-.7t.288-.7q.3-.3.713-.313t.712.288L19.3 11.3q.15.15.213.325t.062.375q0 .2-.063.375t-.212.325l-4.575 4.575q-.3.3-.712.288t-.713-.313q-.275-.3-.288-.7t.288-.7L16.15 13Z"/></svg>
