--- a/public/index.html
+++ b/public/index.html
@@ -294,6 +294,7 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="./socket.io/socket.io.js"></script>
     <script src="index.js" type="module"></script>
   </body>
 </html>
