Agregamos el efecto de quitar y agregar la publicidad, dependiendo la actividad en el panel de control de usuario

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <body>
     <div class="container">
       <!-- Modal Publicidad -->
-      <div class="modal-publicidad swiper2 ocultar-advertising">
+      <div class="modal-publicidad swiper2 ">
         <div class="swiper-wrapper">
           <div class="swiper-slide slide-1 slide-item img-1">
             <img src="assets/modal/AMEYALCO CARAJILLO.jpg" alt="imagen-publicitaria" />
