Se realizan los cambios solicitados 'scroll' en la lista de ordenes

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <body>
     <div class="container">
       <!-- Modal Publicidad -->
-      <div class="modal-publicidad swiper2 ">
+      <div class="modal-publicidad swiper2 ocultar-advertising">
         <div class="swiper-wrapper">
           <div class="swiper-slide slide-1 slide-item img-1">
             <img src="assets/modal/AMEYALCO CARAJILLO.jpg" alt="imagen-publicitaria" />
@@ -100,6 +100,9 @@
         <div class="container-order-list">
           <div class="title-order-list">
             <h2>Order List</h2>
+            <div class="amount-products esfera-animada">
+              <p>0</p>
+            </div>
           </div>
           <div class="ul-order-list">
             <ul class="ulList-orders">
