Se agrega el apartado para imprimir los elementos extras de un pedido

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <body>
     <div class="container">
       <!-- Modal Publicidad -->
-      <div class="modal-publicidad swiper2 ocultar-advertising">
+      <div class="modal-publicidad swiper2 ">
         <div class="swiper-wrapper">
           <div class="swiper-slide slide-1 slide-item img-1">
             <img src="assets/modal/AMEYALCO CARAJILLO.jpg" alt="imagen-publicitaria" />
@@ -32,7 +32,7 @@
       </div>
 
       <!-- Modal Order List -->
-      <div class="modal-order-correct ocultar-order-list">
+      <div class="modal-order-correct ocultar-order-list display-off">
         <div class="title-logo-order-correct">
           <div class="text-order-correct">
             <h2>Is your order correct ?</h2>
@@ -106,7 +106,8 @@
           </div>
           <div class="ul-order-list">
             <ul class="ulList-orders">
-            
+
+
             </ul>
           </div>
           <div class="order-list-total">
