Agregamos nuevos banners

--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,13 @@
       <div class="modal-publicidad swiper2 ">
         <div class="swiper-wrapper">
           <div class="swiper-slide slide-1 slide-item img-1">
-            <img src="assets/modal/AMEYALCO CARAJILLO.jpg" alt="imagen-publicitaria" />
+            <img src="assets/banners/Banner 1080x1920_Cranberry.jpg" alt="imagen-publicitaria" />
           </div>
           <div class="swiper-slide slide-2 slide-item img-2">
-            <img src="assets/modal/Ameyalco ShackBurger.jpg" alt="">
+            <img src="assets/banners/Banner 1080x1920_Holiday.jpg" alt="">
+          </div>
+          <div class="swiper-slide slide-3 slide-item img-3">
+            <img src="assets/banners/Banner 1080x1920_Trufa.jpg" alt="">
           </div>
         </div>
       </div>
@@ -35,7 +38,7 @@
       <div class="modal-order-correct ocultar-order-list display-off">
         <div class="title-logo-order-correct">
           <div class="text-order-correct">
-            <h2>Is your order correct ?</h2>
+            <h2>¿Tu orden es correcta?</h2>
           </div>
           <div class="logo-order-correct">
             <img src="assets/Logo SS 3240x2180px -cut.png" alt="logo-shake">
@@ -50,12 +53,12 @@
 
         <div class="footer-order-correct">
           <div class="footer-order-total">
-            <h2>Please prepare</h2>
+            <h2>Por favor, preparalo.</h2>
             <h2>Total</h2>
             <p>$0.00</p>
           </div>
           <div class="footer-order-title-one">
-            <h2>Thank you for your order</h2>
+            <h2>Gracias por ordenar.</h2>
           </div>
           <div class="footer-order-icon">
             <div class="icon-one">
@@ -66,7 +69,7 @@
             </div>
           </div>
           <div class="footer-order-title-two">
-            <h3>See you at the window</h3>
+            <h3>Nos vemos en la ventanilla</h3>
           </div>
         </div>
 
@@ -77,7 +80,7 @@
 
       <div class="div-product-advertising">
         <div class="title-product-advertising">
-          <h2>Freshly made burgers</h2>
+          <h2>Recomendado para ti.</h2>
         </div>
         <div class="products-shake">
 
@@ -87,7 +90,7 @@
       <!-- Productos recomendados -->
       <div class="div-product-recommendation swiper">
         <div class="title-product-recommendation">
-          <h2>Popular in your Meeeat</h2>
+          <h2>Populares en el Menú.</h2>
         </div>
 
         <div class="div-card-recommendation swiper-wrapper">
@@ -99,7 +102,7 @@
       <div class="div-orders-suggestion">
         <div class="container-order-list">
           <div class="title-order-list">
-            <h2>Order List</h2>
+            <h2>Lista de pedidos:</h2>
             <div class="amount-products esfera-animada">
               <p>0</p>
             </div>
