Se modifica la pantalla dos con el nuevo requerimiento

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <body>
     <div class="container">
       <!-- Modal Publicidad -->
-      <div class="modal-publicidad swiper2 ">
+      <div class="modal-publicidad swiper ocultar-order-list display-off">
         <div class="swiper-wrapper">
           <div class="swiper-slide slide-1 slide-item img-1">
             <img src="assets/banners/Banner 1080x1920_Cranberry.jpg" alt="imagen-publicitaria" />
@@ -78,26 +78,23 @@
 
       <!-- Productos promocionados -->
 
-      <div class="div-product-advertising">
-        <div class="title-product-advertising">
-          <h2>Recomendado para ti.</h2>
-        </div>
-        <div class="products-shake">
-
-        </div>
+      <div class="div-product-advertising modal-publicidad-dos swiper2">
+  
+          <div class="swiper-wrapper">
+            <div class="swiper-slide slide-1 slide-item img-1">
+              <img src="assets/banners/Banner 1080x1920_Cranberry.jpg" alt="imagen-publicitaria" />
+            </div>
+            <div class="swiper-slide slide-2 slide-item img-2">
+              <img src="assets/banners/Banner 1080x1920_Holiday.jpg" alt="">
+            </div>
+            <div class="swiper-slide slide-3 slide-item img-3">
+              <img src="assets/banners/Banner 1080x1920_Trufa.jpg" alt="">
+            </div>
+          </div>
+        
       </div>
 
-      <!-- Productos recomendados -->
-      <div class="div-product-recommendation swiper">
-        <div class="title-product-recommendation">
-          <h2>Populares en el Menú.</h2>
-        </div>
-
-        <div class="div-card-recommendation swiper-wrapper">
-
-        </div>
-      </div>
-
+     
       <!-- Lista de ordenes -->
       <div class="div-orders-suggestion">
         <div class="container-order-list">
