Creamos las apis que controlaran las ordenes

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <body>
     <div class="container">
       <!-- Modal Publicidad -->
-      <div class="modal-publicidad swiper ocultar-order-list display-off">
+      <div class="modal-publicidad swiper ">
         <div class="swiper-wrapper">
           <div class="swiper-slide slide-1 slide-item img-1">
             <img src="assets/banners/Banner 1080x1920_Cranberry.jpg" alt="imagen-publicitaria" />
