Modificamos la carga json, en la propiedad productos a modificadores

--- a/public/index.html
+++ b/public/index.html
@@ -53,8 +53,8 @@
 
         <div class="footer-order-correct">
           <div class="footer-order-total">
-            <h2>Por favor, preparalo.</h2>
-            <h2>Total</h2>
+            <!-- <h2>Por favor, preparalo.</h2> -->
+            <h2>Total:</h2>
             <p>$0.00</p>
           </div>
           <div class="footer-order-title-one">
@@ -69,7 +69,7 @@
             </div>
           </div>
           <div class="footer-order-title-two">
-            <h3>Nos vemos en la ventanilla</h3>
+            <h3>Nos vemos en la siguiente ventanilla</h3>
           </div>
         </div>
 
@@ -99,7 +99,7 @@
       <div class="div-orders-suggestion">
         <div class="container-order-list">
           <div class="title-order-list">
-            <h2>Lista de pedidos:</h2>
+            <h2>Lista de productos:</h2>
             <div class="amount-products esfera-animada">
               <p>0</p>
             </div>
