--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <body>
     <div class="container">
       <!-- Modal Publicidad -->
-      <div class="modal-publicidad swiper ">
+      <div class="modal-publicidad swiper ocultar-order-list display-off">
         <div class="swiper-wrapper">
           <div class="swiper-slide slide-1 slide-item img-1">
             <img src="assets/banners/Banner 1080x1920_Cranberry.jpg" alt="imagen-publicitaria" />
@@ -82,13 +82,13 @@
   
           <div class="swiper-wrapper">
             <div class="swiper-slide slide-1 slide-item img-1">
-              <img src="assets/banners/Banner 1080x1920_Cranberry.jpg" alt="imagen-publicitaria" />
+              <img src="assets/baner-dos/Banner 1080x1400_Cranberry.jpg" alt="imagen-publicitaria" />
             </div>
             <div class="swiper-slide slide-2 slide-item img-2">
-              <img src="assets/banners/Banner 1080x1920_Holiday.jpg" alt="">
+              <img src="assets/baner-dos/Banner 1080x1400_Holiday.jpg" alt="">
             </div>
             <div class="swiper-slide slide-3 slide-item img-3">
-              <img src="assets/banners/Banner 1080x1920_Trufa.jpg" alt="">
+              <img src="assets/baner-dos/Banner 1080x1400_Trufa.jpg" alt="">
             </div>
           </div>
         
