Agregamos los nuevos banner de productos con las medidas 1080x1152

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <body>
     <div class="container">
       <!-- Modal Publicidad -->
-      <div class="modal-publicidad swiper ocultar-order-list display-off">
+      <div class="modal-publicidad swiper ">
         <div class="swiper-wrapper">
           <div class="swiper-slide slide-1 slide-item img-1">
             <img src="assets/banners/Banner 1080x1920_Cranberry.jpg" alt="imagen-publicitaria" />
@@ -79,18 +79,18 @@
       <!-- Productos promocionados -->
 
       <div class="div-product-advertising modal-publicidad-dos swiper2">
-  
-          <div class="swiper-wrapper">
-            <div class="swiper-slide slide-1 slide-item img-1">
-              <img src="assets/baner-dos/Banner 1080x1400_Cranberry.jpg" alt="imagen-publicitaria" />
-            </div>
-            <div class="swiper-slide slide-2 slide-item img-2">
-              <img src="assets/baner-dos/Banner 1080x1400_Holiday.jpg" alt="">
-            </div>
-            <div class="swiper-slide slide-3 slide-item img-3">
-              <img src="assets/baner-dos/Banner 1080x1400_Trufa.jpg" alt="">
-            </div>
+        
+        <div class="swiper-wrapper">
+          <div class="swiper-slide slide-1 slide-item img-1">
+            <img src="assets/baner-dos/Banner 1080x1152_Cranberry.jpg" alt="imagen-publicitaria" />
           </div>
+          <div class="swiper-slide slide-2 slide-item img-2">
+            <img src="assets/baner-dos/Banner 1080x1152_Holiday.jpg" alt="">
+          </div>
+          <div class="swiper-slide slide-3 slide-item img-3">
+            <img src="assets/baner-dos/Banner 1080x1152_Trufa.jpg" alt="">
+          </div>
+        </div>
         
       </div>
 
